# django-blog

./: .gitignore  README.md  README_TR.md  manage.py  pyproject.toml  readme.md  requirements.txt  run.bat  run.sh  setup.bat  setup.sh
article/: admin.py  forms.py  models.py  urls.py  views.py
article/migrations/: 0001_initial.py  0002_alter_article_options_alter_comment_options_and_more.py  0003_comment_parent.py
blog/: settings.py  urls.py
notes/: notes.md
static/css/: minimal.css  modern.css
static/js/: app.js
templates/: about.html  articles.html  dashboard.html  index.html  layout.html  search.html
templates/article/: article_add.html  article_detail.html  article_update.html  comment_item.html  comment_update.html
templates/includes/: footer.html  navbar.html
templates/user/: login.html  profile.html  profile_update.html  register.html  user_articles.html  user_settings.html
user/: admin.py  forms.py  models.py  urls.py  views.py
user/migrations/: 0001_initial.py
