[project]
name = "django-blog"
version = "0.1.0"
description = "A modern Django blog application with Class-Based Views and Custom User Model"
authors = [
    { name = "fastfingertips", email = "fastfingertips@gmail.com" }
]
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    "Django>=5.0",
    "django-crispy-forms>=2.1",
    "crispy-bootstrap5>=0.7",
    "django-ckeditor>=6.7.0",
    "django-cleanup>=8.0.0",
    "python-dotenv>=1.0.0",
    "pillow>=12.1.0",
    "django-browser-reload>=1.21.0",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
]

[tool.ruff]
# Target Python version
target-version = "py311"
line-length = 120
exclude = [
    "**/migrations/*.py",
    ".git",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
# Enable Pyflakes (F) and Pycodestyle (E, W) codes by default
select = ["E", "F", "W", "I", "N", "UP", "PL", "B"]
ignore = [
    "PLR2004", # Magic value comparison
    "E501",    # Line too long
    "PLC0415", # Import should be at top-level (Django manage.py standard)
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
